--- a/LearnApi/appsettings.json
+++ b/LearnApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "apicon": "Server=(localdb)\\MSSQLLocalDB;Database=test_db;Trusted_conection=True; TrustServerCetification=True; Integrated Security=True;"
+  }
 }
