--- a/LearnApi/appsettings.json
+++ b/LearnApi/appsettings.json
@@ -7,11 +7,12 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "apicon": "Server=(localdb)\\MSSQLLocalDB;Database=test_db;Database=test_db;Trusted_Connection=True;TrustServerCertificate=True;"
+    "apicon": "Server=(localdb)\\MSSQLLocalDB;Database=test_db;Database=test_db;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=True "
   },
   "runtimeOptions": {
       "configProperties": {
         "System.Globalization.Invariant": false
+
       }
     }
   }
